AWS DynamoDB for PDFService and ExcelService

--- a/PDFService/src/main/resources/application.properties
+++ b/PDFService/src/main/resources/application.properties
@@ -7,5 +7,7 @@ cloud.aws.credentials.accessKey=AKIATDUKXWJLGCIAFEMB
 cloud.aws.credentials.secretKey=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
 cloud.aws.stack.auto = false
 
+spring.main.allow-bean-definition-overriding=true
+
 logging.level.com.antra=DEBUG
 server.port=9999
