--- a/ClientService/src/main/resources/application.properties
+++ b/ClientService/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.platform=h2
 
 #Replace with your own !!!!!
 cloud.aws.region.static=us-west-1
-cloud.aws.credentials.accessKey=AKIATDUKXWJLGCIAFEMB
-cloud.aws.credentials.secretKey=5jz6Rub9fBb631s9jMhrfIZKL0yjgGLdUZ5EDOW5
+cloud.aws.credentials.accessKey={your accessKey}
+cloud.aws.credentials.secretKey={your secretKey}
 cloud.aws.stack.auto = false
 
 app.aws.sns.topic=reporting_topic
