--- a/ExcelService/src/main/resources/application.properties
+++ b/ExcelService/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 #Replace with your own !!!!!
 s3.bucket=reporting-generated-yao
 cloud.aws.region.static=us-west-1
-cloud.aws.credentials.accessKey=AKIATDUKXWJLGCIAFEMB
-cloud.aws.credentials.secretKey=5jz6Rub9fBb631s9jMhrfIZKL0yjgGLdUZ5EDOW5
+cloud.aws.credentials.accessKey={your accessKey}
+cloud.aws.credentials.secretKey={your secretKey}
 cloud.aws.stack.auto = false
 
 spring.main.allow-bean-definition-overriding=true
