--- a/PDFService/src/main/resources/application.properties
+++ b/PDFService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 sqs.url=https://sqs.us-east-1.amazonaws.com/743634506477/PDF_Request_Queue
 
 #Replace with your own !!!!!
-s3.bucket=reporting-generated-yao
+s3.bucket={your s3}
 cloud.aws.region.static=us-west-1
-cloud.aws.credentials.accessKey=AKIATDUKXWJLGCIAFEMB
-cloud.aws.credentials.secretKey=5jz6Rub9fBb631s9jMhrfIZKL0yjgGLdUZ5EDOW5
+cloud.aws.credentials.accessKey={your accessKey}
+cloud.aws.credentials.secretKey={your secretKey}
 cloud.aws.stack.auto = false
 
 spring.main.allow-bean-definition-overriding=true
